# IA2026_equipo7

./: data_plant_20260423_204830.csv  flash esp32.bat  record_csv.py
Datos_Completos/: Datos riego.csv  datos de frio con tierra seca.csv  datos de noche.csv  datos domingo.csv  datos jueves.csv  datos viernes.csv
eda/: Datos riego.csv  datos1.csv  datos2.csv  datos3.csv  datos4.csv  datos5.csv  main.ipynb  pyproject.toml
embedded/: CMakeLists.txt  partitions.csv
embedded/.devcontainer/: Dockerfile
embedded/main/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.h  storage.cpp  storage.h  test_storage.cpp  time_service.cpp  time_service.h  wifi_uploader.cpp  wifi_uploader.h
