[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda"
version = "0.1.0"
description = "Exploratory Data Analysis for Plant Sensor Data"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
]
